--- a/MCP_indiv_day.Rmd
+++ b/MCP_indiv_day.Rmd
@@ -33,7 +33,7 @@ tagprj <- readOGR(dsn = "Tag_065_UTMzone11n",
 tagproj <- proj4string(tagprj)
 
 min_n <- 50
-n_days <- 5   # # days pooled to create a MCP
+n_days <- 10   # # days pooled to create a MCP
 ```
 
 Read in post and pre datasets
@@ -73,7 +73,10 @@ post.list <- make.HR.dataset(post.all, post.ID.min_n_day, tagproj)
 post.ID <- post.list$unique.ID
 
 mcp.all <- mcp.area.all <- dates.all <- vector(mode = "list", length = length(post.ID))
-post.area.df <- data.frame(date = as.POSIXct(character()), area = numeric(), ID = numeric())
+post.area.df <- data.frame(date = as.POSIXct(character()), 
+                           area = numeric(), ID = numeric(),
+                           lat.center = numeric(),
+                           lon.center = numeric())
 r <- 1
 for (i in 1:length(post.ID)){
   post.turtle1 <- post.list$eachID.utm[[i]]  
@@ -81,49 +84,60 @@ for (i in 1:length(post.ID)){
   post.turtle1.time$dif.time <- difftime(post.turtle1.time$UTC,
                                          post.turtle1.time$UTC[1], 
                                          units = "days")
-  
+  post.turtle1.latlon <- post.list$eachID.coords[[i]]
+
   n.steps <- as.numeric(floor(floor(max(post.turtle1.time$dif.time))/n_days))
-  mcp1.area <- mcp1 <- dates <- vector(mode = "list", length = n.steps)
+  mcp1.area <- mcp1 <- dates <- center <- vector(mode = "list", 
+                                                 length = n.steps)
   min.day <- 0
   for (n in 1:n.steps){
     post.turtle1.ndays <- post.turtle1[post.turtle1.time$dif.time >= min.day &
                                          post.turtle1.time$dif.time < (min.day + n_days),]
     post.turtle1.time.ndays <- post.turtle1.time[post.turtle1.time$dif.time >= min.day &
                                                    post.turtle1.time$dif.time < (min.day + n_days),]
-    
+    post.turtle1.ndays.latlon <- post.turtle1.latlon[post.turtle1.time$dif.time >= min.day &
+                                                   post.turtle1.time$dif.time < (min.day + n_days),]
     if (nrow(post.turtle1.ndays@coords) > 4){
       mcp1.area[[n]] <- mcp.area(post.turtle1.ndays, 
                                  percent = 100, 
-                                 unin = "m", unout = "km2")
+                                 unin = "m", unout = "km2",
+                                 plotit = FALSE)
       
       #mcp1[[n]] <- mcp(post.turtle1.ndays, 
       #                 percent = 100, 
       #                 unin = "m", unout = "km2")
       
       dates[[n]] <- post.turtle1.time.ndays[1, "UTC"]
-      
+      center[[n]] <- rgeos::gCentroid(post.turtle1.ndays.latlon)
+      post.area.df[r, "area"] <- mcp1.area[[n]]
+      post.area.df[r, "date"] <- dates[[n]]
+      post.area.df[r, "lat.center"] <- center[[n]]$y
+      post.area.df[r, "lon.center"] <- center[[n]]$x
     }
+    post.area.df[r, "ID"] <- post.ID[i]
     min.day <- min.day + n_days
+    r <- r + 1
   }
   #mcp.all[[i]] <- mcp1
   mcp.area.all[[i]] <- mcp1.area
   dates.all[[i]] <- dates
   
-  for (k in 1:length(mcp.area.all[[i]])){
-    if (length(mcp1.area[[k]]) > 0){
-      post.area.df[r, "date"] <- dates[[k]] #as.Date(dates[[k]], format = "%Y-%m-%d %H:%M:%S") 
-      post.area.df[r, "area"] <- mcp1.area[[k]]
-      post.area.df[r, "ID"] <- post.ID[i]
-      r <- r + 1
-      
-    }
-  }
+  # for (k in 1:length(mcp.area.all[[i]])){
+  #   if (length(mcp1.area[[k]]) > 0){
+  #     post.area.df[r, "date"] <- dates[[k]] #as.Date(dates[[k]], format = "%Y-%m-%d %H:%M:%S") 
+  #     post.area.df[r, "area"] <- mcp1.area[[k]]
+  #     post.area.df[r, "ID"] <- post.ID[i]
+  #     r <- r + 1
+  #     
+  #   }
+  # }
     
 }
 
 # combine areas and dates into a dataframe
-post.area.df %>% mutate(month = month(date),
-                   doy = yday(date)) -> post.area.df
+post.area.df %>% na.omit() %>%
+  mutate(month = month(date),
+         doy = yday(date)) -> post.area.df
 
 ggplot() + 
   geom_point(data = post.area.df,
@@ -150,7 +164,10 @@ pre.ID <- pre.list$unique.ID
 
 mcp.all <- mcp.area.all <- dates.all <- vector(mode = "list", length = length(post.ID))
 pre.area.df <- data.frame(date = as.POSIXct(character()), 
-                          area = numeric(), ID = numeric())
+                          area = numeric(), 
+                          ID = numeric(),
+                           lat.center = numeric(),
+                           lon.center = numeric())
 r <- 1
 for (i in 1:length(pre.ID)){
   pre.turtle1 <- pre.list$eachID.utm[[i]]  
@@ -158,49 +175,60 @@ for (i in 1:length(pre.ID)){
   pre.turtle1.time$dif.time <- difftime(pre.turtle1.time$UTC,
                                          pre.turtle1.time$UTC[1], 
                                          units = "days")
-  
+  pre.turtle1.latlon <- pre.list$eachID.coords[[i]]
   n.steps <- as.numeric(floor(floor(max(pre.turtle1.time$dif.time))/n_days))
-  mcp1.area <- mcp1 <- dates <- vector(mode = "list", length = n.steps)
+  mcp1.area <- mcp1 <- dates <- center <- vector(mode = "list", length = n.steps)
   min.day <- 0
   for (n in 1:n.steps){
     pre.turtle1.ndays <- pre.turtle1[pre.turtle1.time$dif.time >= min.day &
                                          pre.turtle1.time$dif.time < (min.day + n_days),]
     pre.turtle1.time.ndays <- pre.turtle1.time[pre.turtle1.time$dif.time >= min.day &
                                                    pre.turtle1.time$dif.time < (min.day + n_days),]
+  
+    pre.turtle1.ndays.latlon <- pre.turtle1.latlon[pre.turtle1.time$dif.time >= min.day &
+                                                   pre.turtle1.time$dif.time < (min.day + n_days),]
     
     if (nrow(pre.turtle1.ndays@coords) > 4){
       mcp1.area[[n]] <- mcp.area(pre.turtle1.ndays, 
                                  percent = 100, 
-                                 unin = "m", unout = "km2")
+                                 unin = "m", unout = "km2",
+                                 plotit = FALSE)
       
       #mcp1[[n]] <- mcp(post.turtle1.ndays, 
       #                 percent = 100, 
       #                 unin = "m", unout = "km2")
       
       dates[[n]] <- pre.turtle1.time.ndays[1, "UTC"]
-      
+      center[[n]] <- rgeos::gCentroid(pre.turtle1.ndays.latlon)
+      pre.area.df[r, "area"] <- mcp1.area[[n]]
+      pre.area.df[r, "date"] <- dates[[n]]
+      pre.area.df[r, "lat.center"] <- center[[n]]$y
+      pre.area.df[r, "lon.center"] <- center[[n]]$x
     }
     min.day <- min.day + n_days
+    pre.area.df[r, "ID"] <- pre.ID[i]
+    r <- r + 1
   }
   #mcp.all[[i]] <- mcp1
   mcp.area.all[[i]] <- mcp1.area
   dates.all[[i]] <- dates
   
-  for (k in 1:length(mcp.area.all[[i]])){
-    if (length(mcp1.area[[k]]) > 0){
-      pre.area.df[r, "date"] <- dates[[k]] #as.Date(dates[[k]], format = "%Y-%m-%d %H:%M:%S") 
-      pre.area.df[r, "area"] <- mcp1.area[[k]]
-      pre.area.df[r, "ID"] <- post.ID[i]
-      r <- r + 1
+  #for (k in 1:length(mcp.area.all[[i]])){
+  #  if (length(mcp1.area[[k]]) > 0){
+      #pre.area.df[r, "date"] <- dates[[k]] #as.Date(dates[[k]], format = "%Y-%m-%d %H:%M:%S") 
+   #   pre.area.df[r, "area"] <- mcp1.area[[k]]
+    #  pre.area.df[r, "ID"] <- pre.ID[i]
+     # 
       
-    }
-  }
+    #}
+  #}
     
 }
 
 # combine areas and dates into a dataframe
-pre.area.df %>% mutate(month = month(date),
-                   doy = yday(date)) -> pre.area.df
+pre.area.df %>% na.omit() %>%
+  mutate(month = month(date),
+         doy = yday(date)) -> pre.area.df
 
 ggplot() + 
   geom_point(data = pre.area.df,
@@ -215,14 +243,15 @@ Is there any relationship with water temp?
 pre.area.df$PP <- 0
 post.area.df$PP <- 1
 area.df <- rbind(pre.area.df, post.area.df)
-wtemp <- vector(mode = "numeric", length = nrow(area.df))
+wtemp <- min_wtemp <- max_wtemp <- SD_wtemp <- vector(mode = "numeric", 
+                                                      length = nrow(area.df))
 k <- 1
 
 for (k in 1:nrow(area.df)){
     begin.date <- date(area.df[k, "date"])
     end.date <- date(area.df[k, "date"] + days(n_days - 1))
     tmp.data <- getSDwtmp(begin.date, end.date,
-                        outdir = "data/")
+                        outdir = "data/Wtmp_SDBay/")
     # nc format doesn't seem to work --- gets error using nc_open
     # 6 November 2018
     #datafileID <- nc_open(tmp.nc$filename)
@@ -230,19 +259,33 @@ for (k in 1:nrow(area.df)){
     # these files have column headings in the first row and their
     # units in the second row. so, first two rows need to be removed
     col_names <- names(read_csv(tmp.data$filename$csv, n_max = 0))
-    wtemp[k] <- read_csv(file = tmp.data$filename$csv,
+    data.tmp <- read_csv(file = tmp.data$filename$csv,
                          col_names = col_names,
                          skip = 2) %>%
-      filter(station == "SDBC1") %>%
-      summarise(mean.wtmp = mean(as.numeric(wtmp), na.rm = TRUE))
+      filter(station == "SDBC1")
     
+    wtemp[k] <- data.tmp %>%
+      summarise(mean.wtmp = mean(as.numeric(wtmp), na.rm = TRUE))
+    min_wtemp[k] <- data.tmp %>%
+      summarise(min.wtmp = min(as.numeric(wtmp), na.rm = TRUE))
+    max_wtemp[k] <- data.tmp %>%
+      summarise(max.wtmp = max(as.numeric(wtmp), na.rm = TRUE))
+    SD_wtemp[k] <- data.tmp %>%
+      summarise(SD.wtmp = sd(as.numeric(wtmp), na.rm = TRUE))
 }
 
 area.df$wtemp <- unlist(wtemp)
+area.df$min_wtemp <- unlist(min_wtemp)
+area.df$max_wtemp <- unlist(max_wtemp)
+area.df$SD_wtemp <- unlist(SD_wtemp)
+area.df$dif_wtemp <- area.df$max_wtemp - area.df$min_wtemp
 
 ggplot(data = area.df) +
-  geom_point(aes(x = wtemp, y = area, color = as.factor(PP)),
-             size = 3)
+  geom_point(aes(x = wtemp, y = area, 
+                 color = as.factor(PP)),
+             size = 3) #+ 
+  #facet_grid(. ~ ID) + 
+  #facet_wrap( ~ ID, nrow = 4)
 
 ```
 
@@ -256,5 +299,33 @@ ggplot(data = area.df) +
              size = 3,
              alpha = 0.5)
 
+```
+
+Latitude?
+
+```{r}
+ggplot(data = filter(area.df, PP == 0)) + 
+  geom_point(aes(x = wtemp, y = lat.center, color = as.factor(ID)))
+```
+
+```{r}
+ggplot(data = filter(area.df, PP == 1)) + 
+  geom_point(aes(x = wtemp, y = lat.center, color = as.factor(ID)))
+```
+
+
+Visual analysis doesn't bring out any particular patterns... so let's try mixed-effects model with ID as a random effect.
+```{r}
+library(lme4)
+fit.1 <- lmer(area ~ PP + wtemp + SD_wtemp| ID, data = area.df)
+fit.2 <- lmer(area ~ wtemp + SD_wtemp| ID, data = area.df) 
+fit.3 <- lmer(area ~ PP +  SD_wtemp| ID, data = area.df)
+fit.4 <- lmer(area ~ PP + wtemp | ID, data = area.df) 
+fit.5 <- lmer(area ~ wtemp | ID, data = area.df)
+fit.6 <- lmer(area ~ SD_wtemp| ID, data = area.df)
+
+anova(fit.1, fit.2, fit.3, fit.4, fit.5, fit.6)
+summary(fit.5)
+#plot(fit.1)
 ```
 
